updated water temperature data

--- a/Hauls.ipynb
+++ b/Hauls.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('Created CSVs/all_seins_all_data_standard_dates.csv').drop('Unnamed: 0', axis=1)"
@@ -30,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df[['Date', '# Hauls', 'Common Name', 'Quantity']]"
@@ -41,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.dropna()"
@@ -52,9 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['Date'] =  [dateutil.parser.parse(date) for date in list(df['Date'])]"
@@ -63,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -85,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df[df[\"# Hauls\"].str.contains(r'\\d') == True]"
@@ -96,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
@@ -111,9 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['# Hauls'] = [int(x) for x in hauls]"
@@ -122,9 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.replace(to_replace=['TMTC','Too Many To Count'], value= '30')"
@@ -144,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "quants = []\n",
@@ -158,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['Quantity'] = [int(x) for x in quants]"
@@ -180,9 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hauls = list(df.groupby(['Date', '# Hauls']).sum().index.get_level_values(1))"
@@ -202,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hauls_df = df.groupby(['Date', '# Hauls'], as_index=False).sum()"
@@ -213,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hauls_data = hauls_df[['# Hauls', 'Quantity']]"
@@ -224,9 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -261,9 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['Common Name'] = [x.lower() for x in list(df['Common Name'])]"
@@ -272,9 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "name_changes = {'ctenophore':'comb jelly','comb jellies ctenophores': 'comb jelly', 'comb jellies': 'comb jelly', '20 ctenophores': 'comb jelly'}"
@@ -283,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.replace(name_changes)"
@@ -294,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_no_jellies = df[df['Common Name'] != 'comb jelly']"
@@ -316,9 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -342,9 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -367,18 +325,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 291,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hauls = df.groupby([\"Date\", \"# Hauls\", \"Year\"], as_index=False).sum()"
@@ -387,9 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hauls = list(hauls.groupby(\"Year\").sum()[\"# Hauls\"])"
@@ -398,9 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -420,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_by_year = df.groupby([\"Year\"], as_index=False).sum()\n",
@@ -432,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -454,9 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_by_year[\"# Hauls\"] = hauls\n",
@@ -466,9 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -525,9 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_no_jellies_by_year[\"Catch Per Unit Effort\"] =  df_no_jellies_by_year[\"Quantity\"] / df_no_jellies_by_year[\"# Hauls\"]"
@@ -536,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_by_year[\"Catch Per Unit Effort\"] = df_by_year[\"Quantity\"] / df_by_year[\"# Hauls\"]"
@@ -547,9 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -610,9 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -693,9 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -720,9 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dates = list(set(df['Date']))"
@@ -731,9 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "species_count_dict = {}\n",
@@ -744,9 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 306,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df[\"Species_Count\"] = [species_count_dict[x] for x in df['Date']]"
@@ -755,9 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -853,9 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 308,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hauls_species_df = df.groupby(['Date', '# Hauls', 'Species_Count'], as_index=False).sum()"
@@ -864,9 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -949,9 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -977,9 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hauls_species_df[\"Year\"] = hauls_species_df[\"Date\"].dt.year"
@@ -988,9 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "richness_by_year = hauls_species_df.groupby(\"Year\", as_index=False).sum()"
@@ -999,9 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1069,9 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "richness_by_year[\"Species Richness Per Unit Effort\"] = 1.0*richness_by_year[\"Species_Count\"] / richness_by_year[\"# Hauls\"]"
@@ -1080,9 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1147,9 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1173,9 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df[\"Year\"] = df['Date'].dt.year"
@@ -1193,9 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1256,9 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#df[\"Species Richness Per Haul\"] = 1.0*df[\"Species_Count\"]/df[\"# Hauls\"] "
@@ -1276,9 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df[\"Species Richness Per Unit Effort\"] =  1.0*df[\"Species_Count\"] / df[\"# Hauls\"]"
@@ -1287,9 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df[\"Day of the Year\"] = df[\"Date\"].dt.dayofyear"
@@ -1298,9 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 334,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1335,21 +1229,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
