--- a/Hauls.ipynb
+++ b/Hauls.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('Created CSVs/all_seins_all_data_standard_dates.csv').drop('Unnamed: 0', axis=1)"
@@ -28,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df[['Date', '# Hauls', 'Common Name', 'Quantity']]"
@@ -37,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.dropna()"
@@ -46,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Date'] =  [dateutil.parser.parse(date) for date in list(df['Date'])]"
@@ -55,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -75,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df[df[\"# Hauls\"].str.contains(r'\\d') == True]"
@@ -84,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -97,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['# Hauls'] = [int(x) for x in hauls]"
@@ -106,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.replace(to_replace=['TMTC','Too Many To Count'], value= '30')"
@@ -126,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "quants = []\n",
@@ -138,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Quantity'] = [int(x) for x in quants]"
@@ -158,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hauls = list(df.groupby(['Date', '# Hauls']).sum().index.get_level_values(1))"
@@ -178,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hauls_df = df.groupby(['Date', '# Hauls'], as_index=False).sum()"
@@ -187,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hauls_data = hauls_df[['# Hauls', 'Quantity']]"
@@ -196,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -231,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Common Name'] = [x.lower() for x in list(df['Common Name'])]"
@@ -240,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "name_changes = {'ctenophore':'comb jelly','comb jellies ctenophores': 'comb jelly', 'comb jellies': 'comb jelly', '20 ctenophores': 'comb jelly'}"
@@ -249,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": 286,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.replace(name_changes)"
@@ -258,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_no_jellies = df[df['Common Name'] != 'comb jelly']"
@@ -278,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -302,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -325,14 +367,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 291,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hauls = df.groupby([\"Date\", \"# Hauls\", \"Year\"], as_index=False).sum()"
@@ -341,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hauls = list(hauls.groupby(\"Year\").sum()[\"# Hauls\"])"
@@ -350,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -370,7 +420,9 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_by_year = df.groupby([\"Year\"], as_index=False).sum()\n",
@@ -380,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -400,7 +454,9 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_by_year[\"# Hauls\"] = hauls\n",
@@ -410,7 +466,9 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -467,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_no_jellies_by_year[\"Catch Per Unit Effort\"] =  df_no_jellies_by_year[\"Quantity\"] / df_no_jellies_by_year[\"# Hauls\"]"
@@ -476,7 +536,9 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_by_year[\"Catch Per Unit Effort\"] = df_by_year[\"Quantity\"] / df_by_year[\"# Hauls\"]"
@@ -485,7 +547,9 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -546,7 +610,9 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -627,7 +693,9 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -652,7 +720,9 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dates = list(set(df['Date']))"
@@ -661,7 +731,9 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "species_count_dict = {}\n",
@@ -672,7 +744,9 @@
   {
    "cell_type": "code",
    "execution_count": 306,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df[\"Species_Count\"] = [species_count_dict[x] for x in df['Date']]"
@@ -681,7 +755,9 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -777,7 +853,9 @@
   {
    "cell_type": "code",
    "execution_count": 308,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hauls_species_df = df.groupby(['Date', '# Hauls', 'Species_Count'], as_index=False).sum()"
@@ -786,7 +864,9 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -869,7 +949,9 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -895,7 +977,9 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hauls_species_df[\"Year\"] = hauls_species_df[\"Date\"].dt.year"
@@ -904,7 +988,9 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "richness_by_year = hauls_species_df.groupby(\"Year\", as_index=False).sum()"
@@ -913,7 +999,9 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -981,7 +1069,9 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "richness_by_year[\"Species Richness Per Unit Effort\"] = 1.0*richness_by_year[\"Species_Count\"] / richness_by_year[\"# Hauls\"]"
@@ -990,7 +1080,9 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1055,7 +1147,9 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1079,7 +1173,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df[\"Year\"] = df['Date'].dt.year"
@@ -1097,7 +1193,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1158,7 +1256,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#df[\"Species Richness Per Haul\"] = 1.0*df[\"Species_Count\"]/df[\"# Hauls\"] "
@@ -1176,7 +1276,9 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df[\"Species Richness Per Unit Effort\"] =  1.0*df[\"Species_Count\"] / df[\"# Hauls\"]"
@@ -1185,7 +1287,9 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df[\"Day of the Year\"] = df[\"Date\"].dt.dayofyear"
@@ -1194,7 +1298,9 @@
   {
    "cell_type": "code",
    "execution_count": 334,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1229,21 +1335,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
