--- a/Reformat Files/Create_Combined_Table_Making_All_Seins_All_Data_reformatted.ipynb
+++ b/Reformat Files/Create_Combined_Table_Making_All_Seins_All_Data_reformatted.ipynb
@@ -85,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -107,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#moving the scientific name column\n",
@@ -134,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2349,9 +2343,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_2016 =  pd.read_csv(csv_2016)\n",
@@ -2364,9 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4279,9 +4269,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6260,18 +6248,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 146,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_2013 =  pd.read_csv(csv_2013)\n",
@@ -6301,9 +6285,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8316,9 +8298,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8572,9 +8552,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -8599,9 +8577,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8840,9 +8816,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_2010 = reformat_2010()\n",
@@ -8855,9 +8829,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9099,9 +9071,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_2009 = reformat_2009()\n",
@@ -9116,9 +9086,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9361,9 +9329,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_2008 =  reformat_2008()"
@@ -9372,9 +9338,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_2008 =  add_columns(df_2008, combined_df)\n",
@@ -9393,9 +9357,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9610,9 +9572,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "combined_df['Quantity'] = combined_df['Quantity'].astype(str)"
@@ -9621,9 +9581,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -11647,9 +11605,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#combined_df.apply(lambda x: x.str.strip()).replace('', np.nan).tail()"
@@ -11658,9 +11614,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "combined_df = combined_df.apply(lambda x: x.str.strip()).replace('', np.nan)"
@@ -11669,9 +11623,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -13695,9 +13647,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#combined_df[combined_df['Date'] ==\"4/25/2012\"]"
@@ -13706,9 +13656,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#combined_df.tail()"
@@ -13717,9 +13665,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "combined_df = combined_df.dropna(subset = [\"Common Name\"])"
@@ -13739,9 +13685,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -15804,21 +15748,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
