--- a/Untitled Folder/Species frequency vs temperature.ipynb
+++ b/Untitled Folder/Species frequency vs temperature.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,29 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\seasonal\\AppData\\Local\\Continuum\\anaconda2\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['Date'] = pd.to_datetime(df['Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +167,7 @@
        "26.099999999999994"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -254,13 +241,320 @@
        "(115, 100, 765, 1215, 1665, 245)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_cold.size, df_cool.size, df_tepid.size, df_warm.size, df_hot.size,df_hot_tub.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cold = df_cold.groupby(\"Grouped Corrected Common Name\", as_index=False).sum()[[\"Corrected Quantity\",\"Grouped Corrected Common Name\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cold['Percentile'] =  cold[\"Corrected Quantity\"]/ cold[\"Corrected Quantity\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seine_count = df_cold.groupby(\"Grouped Corrected Common Name\").count()['Corrected Quantity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cold['Per Seine'] = cold['Corrected Quantity']/list(seine_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Corrected Quantity</th>\n",
+       "      <th>Grouped Corrected Common Name</th>\n",
+       "      <th>Percentile</th>\n",
+       "      <th>Per Seine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>amphipod</td>\n",
+       "      <td>0.011905</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>asian shore crab</td>\n",
+       "      <td>0.065476</td>\n",
+       "      <td>5.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33</td>\n",
+       "      <td>atlantic silverside</td>\n",
+       "      <td>0.196429</td>\n",
+       "      <td>16.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>atlantic tomcod</td>\n",
+       "      <td>0.005952</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>bay anchovy</td>\n",
+       "      <td>0.017857</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>9</td>\n",
+       "      <td>blue crab</td>\n",
+       "      <td>0.053571</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>12</td>\n",
+       "      <td>comb jelly</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>flatfish</td>\n",
+       "      <td>0.011905</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>hermit crab</td>\n",
+       "      <td>0.005952</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6</td>\n",
+       "      <td>herring</td>\n",
+       "      <td>0.035714</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>isopod</td>\n",
+       "      <td>0.005952</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>4</td>\n",
+       "      <td>jellyfish</td>\n",
+       "      <td>0.023810</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>northern pipefish</td>\n",
+       "      <td>0.011905</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>polychaete worm</td>\n",
+       "      <td>0.005952</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>3</td>\n",
+       "      <td>sea snail</td>\n",
+       "      <td>0.017857</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>73</td>\n",
+       "      <td>shrimp</td>\n",
+       "      <td>0.434524</td>\n",
+       "      <td>36.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>4</td>\n",
+       "      <td>striped bass</td>\n",
+       "      <td>0.023810</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Corrected Quantity Grouped Corrected Common Name  Percentile  Per Seine\n",
+       "0                    2                      amphipod    0.011905        2.0\n",
+       "1                   11              asian shore crab    0.065476        5.5\n",
+       "2                   33           atlantic silverside    0.196429       16.5\n",
+       "3                    1               atlantic tomcod    0.005952        1.0\n",
+       "4                    3                   bay anchovy    0.017857        3.0\n",
+       "5                    9                     blue crab    0.053571        9.0\n",
+       "6                   12                    comb jelly    0.071429        4.0\n",
+       "7                    2                      flatfish    0.011905        2.0\n",
+       "8                    1                   hermit crab    0.005952        1.0\n",
+       "9                    6                       herring    0.035714        6.0\n",
+       "10                   1                        isopod    0.005952        1.0\n",
+       "11                   4                     jellyfish    0.023810        2.0\n",
+       "12                   2             northern pipefish    0.011905        2.0\n",
+       "13                   1               polychaete worm    0.005952        1.0\n",
+       "14                   3                     sea snail    0.017857        3.0\n",
+       "15                  73                        shrimp    0.434524       36.5\n",
+       "16                   4                  striped bass    0.023810        4.0"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seine_count = df_cold.groupby(\"Grouped Corrected Common Name\").count()['Corrected Quantity']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Grouped Corrected Common Name\n",
+       "amphipod               1\n",
+       "asian shore crab       2\n",
+       "atlantic silverside    2\n",
+       "atlantic tomcod        1\n",
+       "bay anchovy            1\n",
+       "blue crab              1\n",
+       "comb jelly             3\n",
+       "flatfish               1\n",
+       "hermit crab            1\n",
+       "herring                1\n",
+       "isopod                 1\n",
+       "jellyfish              2\n",
+       "northern pipefish      1\n",
+       "polychaete worm        1\n",
+       "sea snail              1\n",
+       "shrimp                 2\n",
+       "striped bass           1\n",
+       "Name: Corrected Quantity, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seine_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Grouped Corrected Common Name\n",
+       "amphipod                2\n",
+       "asian shore crab       11\n",
+       "atlantic silverside    33\n",
+       "atlantic tomcod         1\n",
+       "bay anchovy             3\n",
+       "blue crab               9\n",
+       "comb jelly             12\n",
+       "flatfish                2\n",
+       "hermit crab             1\n",
+       "herring                 6\n",
+       "isopod                  1\n",
+       "jellyfish               4\n",
+       "northern pipefish       2\n",
+       "polychaete worm         1\n",
+       "sea snail               3\n",
+       "shrimp                 73\n",
+       "striped bass            4\n",
+       "Name: Corrected Quantity, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cold"
    ]
   },
   {
