making graphs for presentation

--- a/Hauls.ipynb
+++ b/Hauls.ipynb
@@ -63,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -224,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -316,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -342,9 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -398,9 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -432,9 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -466,9 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -547,9 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -610,9 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -693,9 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -755,9 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -864,9 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -949,9 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -999,9 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1080,9 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1147,9 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1193,9 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1298,9 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 334,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1335,21 +1299,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
